# bh-motion_ros-pkg

./: CMakeLists.txt  mainpage.dox  manifest.xml  readme
src/: CMakeLists.txt  exampleNode.cpp  motionNode.cpp
src/bh_motion/msg/: _BikeEngineOutput.py  _BikeRequest.py  _Cognition2Motion.py  _CognitionFrameInfo.py  _DamageConfiguration.py  _DynPoint.py  _FallDownState.py  _GroundContactState.py  _HardnessData.py  _HeadAngleRequest.py  _HeadJointRequest.py  _JointData.py  _JointRequest.py  _KeyStates.py  _Motion2Cognition.py  _MotionInfo.py  _MotionRequest.py  _MotionRobotHealth.py  _OdometryData.py  _Pose2D.py  _Pose3D.py  _RobotInfo.py  _RobotModel.py  _RotationMatrix.py  _SensorData.py  _SpecialActionRequest.py  _TorsoMatrix.py  _Translation.py  _Vector2.py  _Vector3.py  _WalkRequest.py  __init__.py
src/bh_src/Config/: bodyContour.cfg  bush.cfg  cameraControlEngine.cfg  minimumTiltAngle.tab  regionAnalyzer.cfg  regionizer.cfg  robotLocatorUKF.cfg  robotPerceptor.cfg  settings.cfg  teamMarkerPerceptor.cfg  teams.cfg  walking.cfg
src/bh_src/Config/Behavior/: Behavior.bs  ButtonInterface.bs  GetUpControl.bs  PenalizedControl.bs  Playing.bs  Ready.bs
src/bh_src/Config/Behavior/HeadControls/: HeadControl.bs  SfbHeadControl.bs
src/bh_src/Config/Behavior/Roles/: PenaltyGoalie.bs  PenaltyStriker.bs
src/bh_src/Config/Behavior/Skills/: KickBallTo.bs  SearchForBall.bs
src/bh_src/Config/Behavior/Tools/: Common.bs  Motion.bs
src/bh_src/Config/Bike/: kickForward.bmc
src/bh_src/Config/Keys/: id_rsa_nao  id_rsa_nao.ppk  id_rsa_nao.pub
src/bh_src/Config/Locations/Default/: behavior.cfg  camera.cfg  coltable.c64  coltableNew.c64  coltableNew.kdt  coltableOld.c64  coltableOld.kdt  coltableSim.c64  combinedWorldModel.cfg  field.cfg  fieldModel.tab  footPerceptor.cfg  logging.cfg  matchStatistic.cfg  modules.cfg  obstacleCombinator.cfg  pathFinder.cfg  selfloc.cfg  usObstacleGrid.cfg
src/bh_src/Config/Locations/Penalty/: modules.cfg
src/bh_src/Config/Processes/: CognitionModules.cfg  MotionModules.cfg
src/bh_src/Config/Robots/Default/: cameraCalibration.cfg  robotDimensions.cfg
src/bh_src/Config/Robots/Nao/: cameraCalibration.cfg  robotDimensions.cfg  sensorCalibration.cfg
src/bh_src/Config/Scenes/: BH2011.con  BH2011.ros2  Ball2010SPL.rsi2  BikeScene.con  BikeScene.ros2  BikeSceneRemoteWithPuppet.con  BikeSceneRemoteWithPuppet.ros2  CameraCalibrator.con  Field2010SPL.rsi2  FieldOpenChallenge2011.rsi2  Game2011.con  Game2011.ros2  GameStates.con  Joystick.con  MultiplePlayers2011.con  MultiplePlayers2011.ros2  NaoV3.2RWithV3.3RArms.rsi2  OpenChallenge2011.ros2  Recording.con  RemoteRobot.con  ReplayRobot.con  ReplayVideo.con  ReplayVideo.ros2  ScriptRemoteRobot.con  ScriptRemoteRobot.ros2  TeamComm.con  TeamComm3D.ros2  Views.con  ViewsJpeg.con  coltable.con  connect.con  connectWithPuppet.con  teamPort.con
src/bh_src/Config/Scenes/Textures/: shadow.tga  textures-button_gray.tga
src/bh_src/Src/Controller/: ConsoleRoboCupCtrl.cpp  ConsoleRoboCupCtrl.h  Controller.qrc  LocalRobot.cpp  LocalRobot.h  LogPlayer.cpp  LogPlayer.h  Oracle.cpp  Oracle.h  RemoteRobot.cpp  RemoteRobot.h  RemoteRobotWithPuppet.cpp  RemoteRobotWithPuppet.h  RoboCupCtrl.cpp  RoboCupCtrl.h  RobotConsole.cpp  RobotConsole.h  TeamComm3DCtrl.cpp  TeamComm3DCtrl.h  TeamRobot.cpp  TeamRobot.h
src/bh_src/Src/Controller/Representations/: ColorTableCreator.cpp  ColorTableCreator.h  ColorTableHandler.cpp  ColorTableHandler.h
src/bh_src/Src/Controller/Views/: ColorSpaceView.cpp  ConsoleView.cpp  ConsoleView.h  ImageView.cpp  ImageView.h  ModuleView.cpp  ModuleView.h  PlotView.h  SensorView.cpp  TeamComm3DView.cpp  View3D.cpp  XabslView.cpp  XabslView.h
src/bh_src/Src/Controller/Visualization/: DebugDrawing.cpp  DebugDrawing.h  DebugDrawing3D.cpp  DebugDrawing3D.h  HeaderedWidget.h  OpenGLMethods.cpp  OpenGLMethods.h  PaintMethods.cpp
src/bh_src/Src/Modules/BehaviorControl/: BasicBehavior.h  Symbols.h
src/bh_src/Src/Modules/Configuration/: CameraCalibrator.cpp  CameraCalibrator.h  CognitionConfigurationDataProvider.cpp  CognitionConfigurationDataProvider.h  JointCalibrator.h  MotionConfigurationDataProvider.cpp  MotionConfigurationDataProvider.h  WhiteCorrection.cpp  WhiteCorrection.h
src/bh_src/Src/Modules/Infrastructure/: CameraProvider.cpp  CameraProvider.h  CognitionLogDataProvider.cpp  CognitionLogDataProvider.h  GameDataProvider.cpp  GameDataProvider.h  LogConverter.cpp  LogConverter.h  LogDataProvider.h  MotionLogDataProvider.cpp  MotionLogDataProvider.h  NaoProvider.cpp  NaoProvider.h  RobotHealthProvider.cpp  RobotHealthProvider.h  TeamDataProvider.cpp  TeamDataProvider.h
src/bh_src/Src/Modules/MotionControl/: BIKEParameters.cpp  BIKEParameters.h  BLAME.cpp  BLAME.h  BlameData.cpp  BlameData.h  HeadMotionEngine.cpp  HeadMotionEngine.h  MotionCombinator.cpp  MotionCombinator.h  MotionSelector.cpp  MotionSelector.h  SpecialActions.cpp  SpecialActions.h
src/bh_src/Src/Modules/Perception/: BallPerceptor.cpp  BallPerceptor.h  BodyContourProvider.cpp  BodyContourProvider.h  CameraMatrixProvider.cpp  CameraMatrixProvider.h  CoordinateSystemProvider.cpp  CoordinateSystemProvider.h  GoalPerceptor.cpp  GoalPerceptor.h  LinePerceptor.cpp  LinePerceptor.h  PointExplorer.cpp  PointExplorer.h  RegionAnalyzer.cpp  RegionAnalyzer.h  Regionizer.cpp  Regionizer.h  RobotCameraMatrixProvider.cpp  RobotCameraMatrixProvider.h  RobotPerceptor.cpp  (+3 more)
src/bh_src/Src/Platform/: BHAssert.h  Camera.h  DebugHandler.h  Semaphore.h  SoundPlayer.h  SystemCall.h  Thread.h
src/bh_src/Src/Representations/: Blackboard.cpp  Blackboard.h
src/bh_src/Src/Tools/: Boundary.h  ColorIndex.cpp  ColorIndex.h  Enum.cpp  ForwardKinematic.h  Global.h  InverseKinematic.h  LimitedPriorityQueue.h  NTP.h  PathFinder.cpp  PathFinder.h  Range.h  Settings.cpp  Settings.h  Sha1.cpp
src/uch_src/UChProcess/: UChBlackBoard.h  UChCognitionExecutor.cpp  UChCognitionExecutor.h  UChMotionExecutor.cpp  UChMotionExecutor.h  main.cpp  process.cpp  process.h
src/uch_src/UChRobotComm/: UChRobotData.h  uchrobotcomm.cpp  uchrobotcomm.h
(+388 files in other folders)
